<resources>
    <string name="app_name">QuickMart</string>
    <!--    Bottom Navigation Items-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="orders">Orders</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Product view -->
    <string name="product_view_image_desc">Image of the product that is being viewed.</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="minus">–</string>
    <string name="plus">+</string>

    <!-- Cart strings -->
    <string name="proceed_pay"><![CDATA[Proceed & Pay]]></string>
    <string name="cart">Cart</string>
    <string name="cart_product_image">Cart Product Image</string>
    <string name="cart_item_quantity">Quantity: %1$d</string>
    <string name="cart_item_price">Price: %1$s</string>
    <string name="title_cart">Cart</string>
    <string name="product_details">Product Details</string>

    <string name="currency">Rs.</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="product_add_failed">Failed to add product to cart</string>
    <string name="sub_total_2f">Subtotal: %s%.2f</string>
    <string name="_0_00">0.00</string>
    <string name="by_s">By %s</string>
    <string name="my_orders">My Orders</string>
    <string name="product_name">Product Name</string>
    <string name="status_s">Status: %s</string>
    <string name="qty_d">Qty: %d</string>
    <string name="s_2f">%s%.2f</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="product_image">Product Image</string>
    <string name="search_for_products">Search entire store...</string>
    <string name="orderid_s">OrderID: %s</string>
    <string name="date_s">Date: %s</string>
    <string name="show_items">Show Items ▼</string>
    <string name="hide_items">Hide Items ▲</string>
    <string name="why_are_you_canceling_the_order">Why are you canceling the order?</string>
    <string name="wrong_order">Wrong order</string>
    <string name="no_longer_need_item">No longer need item</string>
    <string name="other">Other</string>
    <string name="please_specify">Please specify</string>
    <string name="description">Description</string>
    <string name="ratings_reviews">Vendor Score</string>
    <string name="add_review">Add Review</string>
    <string name="choose_quantity_d_left">Choose Quantity (%d left): </string>
    <string name="review_count">(%d)</string>
    <string name="write_your_comment_here">Write your comment here…</string>
    <string name="confirm">Confirm</string>
    <string name="rating_out_of_5">Rating (out of 5)</string>
    <string name="review_comment_optional">Review / Comment (optional)</string>
    <string name="you_d">Your Rating: %d</string>
    <string name="edit">Edit</string>
    <string name="no_comment_given">No comment Given</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="review_request_prompt">You have purchased this item before. Would you like to leave a review?</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_city">Vendor City\n</string>
    <string name="vendor_rating">4.5</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="products">Products</string>
    <string name="vendors">Vendors</string>
    <string name="sample_chip_text">Sample</string>
    <string name="vendor_phone">Vendor Phone</string>
    <string name="vendor_email">Vendor email</string>
    <string name="vendor_address">Vendor Address</string>
    <string name="rating_count">Rating count</string>
    <string name="vendor_rating_count">Vendor Rating Count</string>
    <string name="error_text">Error occured</string>
    <string name="vendor_products_empty_text">No products to display</string>
    <string name="email_icon">Email icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="address_icon">Address Icon</string>
    <string name="location_icon">City Icon</string>

    <string-array name="search_filters">
        <item>Products</item>
        <item>Vendors</item>
    </string-array>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nic_national_identity_card_number">NIC (National Identity Card Number)</string>
    <string name="save_changes">Save Changes</string>
    <string name="update_address">Update Address</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="cancel">Cancel</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_city">Vendor City\n</string>
    <string name="vendor_rating">4.5</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="products">Products</string>
    <string name="vendors">Vendors</string>
    <string name="sample_chip_text">Sample</string>
    <string name="vendor_phone">Vendor Phone</string>
    <string name="vendor_email">Vendor email</string>
    <string name="vendor_address">Vendor Address</string>
    <string name="rating_count">Rating count</string>
    <string name="vendor_rating_count">Vendor Rating Count</string>
    <string name="error_text">Error occured</string>
    <string name="vendor_products_empty_text">No products to display</string>

    <string-array name="search_filters">
        <item>Products</item>
        <item>Vendors</item>
    </string-array>
</resources>