<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_are_you_canceling_the_order"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <RadioGroup
        android:id="@+id/reasonRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/wrongOrderRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_order" />

        <RadioButton
            android:id="@+id/noNeedRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_longer_need_item" />

        <RadioButton
            android:id="@+id/otherReasonRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <EditText
        android:id="@+id/otherReasonEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_specify"
        android:visibility="gone"
        android:inputType="text" />

</LinearLayout>
