<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Rating input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_out_of_5"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <RatingBar
        android:id="@+id/dialog_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:rating="0"/>

    <!-- Review/Comment input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_comment_optional"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/dialog_review_input"
        android:layout_width="match_parent"
        android:autofillHints="review"
        android:maxWidth="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_comment_here"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="5"
        android:gravity="top"/>

</LinearLayout>
