<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        app:defaultNavHost="true"
        />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mobile.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"
        app:defaultNavHost="true"

        />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mobile.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"
        app:defaultNavHost="true"
        >
        <action
            android:id="@+id/action_navigation_profile_to_editProfile"
            app:destination="@id/editProfile" />
    </fragment>
    <fragment
        android:id="@+id/editProfile"
        android:name="com.example.mobile.ui.profileEdit.EditProfile"
        android:label="Edit Account Details"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfile_to_navigation_profile3"
            app:popUpTo="@id/navigation_profile" />
    </fragment>
</navigation>