<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Product Image -->
        <ImageView
            android:id="@+id/cart_item_product_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cart_product_image"
            android:layout_marginEnd="16dp"/>

        <!-- Product Details (Name, Quantity, Price) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Product Name -->
            <TextView
                android:id="@+id/cart_item_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <!-- Quantity -->
            <TextView
                android:id="@+id/cart_item_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_item_quantity"/>

            <!-- Price -->
            <TextView
                android:id="@+id/cart_item_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cart_item_price"
                android:textColor="@android:color/holo_green_dark"/>
        </LinearLayout>

        <Button
            android:id="@+id/cart_item_remove_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="Remove" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
