<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vendor_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="6dp"
    android:focusable="true"
    android:clickable="true"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true">

    <!-- Layout for Vendor Name, City, Rating bar and rating count -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Vendor Name -->
        <TextView
            android:id="@+id/vendor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/vendor_name" />

        <!-- Vendor City -->
        <TextView
            android:id="@+id/vendor_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            tools:text="@string/vendor_city" />

        <!-- Rating Bar and Rating Count -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            android:padding="12dp">

            <!-- Rating Bar -->
            <RatingBar
                android:id="@+id/vendor_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:progressTint="@color/purple_700" />

            <!-- Rating Count -->
            <TextView
                android:id="@+id/vendor_rating_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="@string/review_count" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>